--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="light-theme">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
